# swephR

./: .Rbuildignore  .gitignore  .gitmodules  .travis.yml  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  NAMESPACE  NEWS.md  README.Rmd  README.md  SE.rda  appveyor.yml  authors.html  cleanup  cleanup.win  configure  configure.ac  cran-comments.md  ephemeris  index.html  pkgdown.yml  sitemap.xml
.aspell/: defaults.R  swephR.rds
R/: RcppExports.R  SEdata.R  Section0.R  Section2.R  Section3.R  Section4.R  SectionConstants.R  SwissEphemeris-package.R  calculation.R  data.R  expert-interface.R  swephR-package.R  vectorisedSEfunctions.R  zzz.R
articles/: index.html  swephR.html
data/: .gitignore  SE.rda  bodies.rda  flags.rda
data-raw/: enumerations.R
doc/: VectorisedSwephR.R  VectorisedSwephR.Rmd  VectorisedSwephR.html  swephR.html
docker/: Dockerfile
inst/: CITATION  WORDLIST
man/: SE.Rd  Section0.Rd  Section1.Rd  Section10.Rd  Section13.Rd  Section14.Rd  Section15.Rd  Section16.Rd  Section2.Rd  Section3.Rd  Section4.Rd  Section5.Rd  Section6.Rd  Section7.Rd  Section8.Rd  Section9.Rd  SectionConstants.Rd  SwissEphemeris-package.Rd  Vectorised.Rd  calculation.Rd  day_of_week.Rd  deltat.Rd  eclipse_pheno.Rd  enumerations.Rd  expert-interface.Rd  get_tid_acc.Rd  misc.Rd  set_delta_t_userdef.Rd  set_ephe_path.Rd  set_tid_acc.Rd  set_topo.Rd  swephR-package.Rd  version.Rd
news/: index.html
reference/: SE.html  Section1.html  Section10.html  Section13.html  Section14.html  Section15.html  Section16.html  Section2.html  Section3.html  Section4.html  Section5.html  Section6.html  Section7.html  Section8.html  Section9.html  index.html  swephR-package.html
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  Section1.cpp  Section16.cpp  Section2.cpp  Section3.cpp  Section4.cpp  Section6.cpp  Section7.cpp  Section8.cpp  Section9.cpp  SwissEphemeris.cpp  calculation.cpp  eclipse_pheno.cpp  misc.cpp  swephR.cpp  swephapi.h
tests/: some-test-lines.R  testthat.R
vignettes/: VectorisedSwephR.Rmd  VectorisedSwephR.html  (+3 more)
(+23 files in other folders)
